# rust_axum

./: .env  Cargo.toml
hurl/: contact.hurl  contact_form.hurl  create.hurl  delete.hurl  get.hurl  get_single.hurl  print.hurl  search.hurl  update.hurl
migrations/: 20230806172058_test.sql  20230806173911_rename_table.sql  20230807024126_add_dummy.sql  20230807065044_add_timezone.sql  20230814155357_alter_table_2.sql
src/: contoh.rs  db.rs  ipfs_router.rs  main.rs
src/contoh/: contoh_2.rs
src/ipfs_router/: ipfs_controller.rs  ipfs_model.rs  seaart_resp.rs
