[package]
name = "rust_ipfs_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "runtime-tokio-native-tls", "offline"] }
tokio = { version = "1.29.1", features = ["full"] }
