[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
log = { version = "0.4.20", features = ["std", "serde"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false}
scraper = "0.17.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.3", features = ["postgres", "chrono", "runtime-tokio-rustls", "offline"] }
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
strip = true
opt-level = 2
lto  = true
codegen-units = 1
